--- a/config/zones/US-SW-TEPC.yaml
+++ b/config/zones/US-SW-TEPC.yaml
@@ -160,6 +160,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -167,6 +170,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1044.036558945808
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1049.8710181012766
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -174,11 +180,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 551.2211466358136
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 522.3770975723654
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -206,6 +219,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 754.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -240,6 +257,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -247,6 +268,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1104.036558945808
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1109.8710181012766
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -254,11 +278,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 671.2211466358136
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 642.3770975723654
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -295,6 +326,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 998.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
