--- a/config/zones/US-AK.yaml
+++ b/config/zones/US-AK.yaml
@@ -12,6 +12,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -19,6 +22,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1040.2108414955262
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1051.2364608925723
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -26,11 +32,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 442.92371913492497
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 442.8330050139731
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -38,12 +51,19 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 663.8839597479941
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 665.4770914121948
   lifecycle:
     biomass:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -52,6 +72,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1100.2108414955262
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1111.2364608925723
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -59,11 +82,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 562.923719134925
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 562.8330050139731
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -71,6 +101,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 907.8839597479941
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 909.4770914121948
 region: Americas
 sources:
   IPCC 2014:
