--- a/config/zones/US-CAR-SCEG.yaml
+++ b/config/zones/US-CAR-SCEG.yaml
@@ -236,6 +236,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -243,6 +246,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 946.9012095380552
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 972.0663633884146
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -250,11 +256,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 462.3141304645547
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 451.1888745347415
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -282,6 +295,9 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 754.5315891025153
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1297.8346930177995
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -322,6 +338,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -330,6 +350,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1006.9012095380552
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1032.0663633884146
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -337,11 +360,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 582.3141304645546
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 571.1888745347414
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -381,6 +411,9 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 998.5315891025153
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1541.8346930177995
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
