--- a/config/zones/US-FLA-FMPP.yaml
+++ b/config/zones/US-FLA-FMPP.yaml
@@ -131,6 +131,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -138,6 +141,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 806.7004193423496
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 763.2191822274799
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -145,11 +151,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 439.9025360279061
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 399.91916460663316
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -176,6 +189,10 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 791.3672765485921
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -213,6 +230,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -220,6 +241,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 866.7004193423496
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 823.2191822274799
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -227,11 +251,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 559.9025360279061
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 519.9191646066331
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -270,6 +301,10 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1035.3672765485921
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
