--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -218,10 +218,16 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 863.1977405560416
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 820.6213620478562
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -229,11 +235,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 360.33756303006584
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 356.13172274599776
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -261,6 +274,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 754.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -301,6 +318,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2012-01-01'
       source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -309,6 +330,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 923.1977405560416
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 880.6213620478562
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -316,11 +340,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 480.33756303006584
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 476.13172274599776
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -360,6 +391,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 998.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
