--- a/config/zones/US-MIDW-AECI.yaml
+++ b/config/zones/US-MIDW-AECI.yaml
@@ -124,6 +124,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -131,6 +134,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 933.8567719793567
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 937.267777658772
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -138,11 +144,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 408.7406042020761
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 406.3004425342369
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -169,6 +182,10 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 664.14088513536
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -206,6 +223,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -214,6 +235,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 993.8567719793567
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 997.267777658772
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -221,11 +245,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 528.7406042020762
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 526.3004425342369
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -264,6 +295,10 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 908.14088513536
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
