--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -1257,6 +1257,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1264,6 +1267,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1003.7029994907185
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1000.874550756691
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1271,11 +1277,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 409.4254165197668
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 411.3519924413645
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1305,6 +1318,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 613.5782157150479
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 501.6935207852357
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -1345,6 +1361,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -1353,6 +1373,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1063.7029994907184
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1060.874550756691
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -1360,11 +1383,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 529.4254165197668
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 531.3519924413645
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1403,6 +1433,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 857.5782157150479
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 745.6935207852357
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
