--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -880,6 +880,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -887,6 +890,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1049.543638320452
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1086.1257778671156
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -894,11 +900,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 388.405126933921
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 392.1225766993324
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -928,6 +941,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 781.5574904153493
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 895.8408038663823
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -968,6 +984,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -976,6 +996,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1109.543638320452
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1146.1257778671156
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -983,11 +1006,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 508.405126933921
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 512.1225766993324
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1026,6 +1056,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1025.5574904153493
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1139.8408038663824
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
