--- a/config/zones/US-NW-IPCO.yaml
+++ b/config/zones/US-NW-IPCO.yaml
@@ -229,11 +229,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 984.16897110535
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 992.920614108907
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -241,12 +248,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 441.2147276174657
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 448.424204594005
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
       value: 0.0
     - datetime: '2021-01-01'
       source: eGrid 2021
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: eGrid 2022
       value: 0.0
     hydro discharge:
     - datetime: '2015-01-01'
@@ -275,6 +288,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 754.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -312,6 +329,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2014-01-01'
       source: IPCC 2014
@@ -320,6 +341,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1044.16897110535
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1052.920614108907
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -327,12 +352,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 561.2147276174658
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 568.424204594005
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
       value: 38.0
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
+      value: 38.0
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
       value: 38.0
     hydro discharge:
     - datetime: '2015-01-01'
@@ -373,6 +404,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 998.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
