--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -295,6 +295,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -302,6 +305,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1092.633856676898
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1049.698182363371
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -309,6 +315,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 399.4991639237896
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 400.24829769089723
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -316,6 +325,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 3.4303641735972765
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1.1347416194747946
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -343,6 +355,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 754.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -377,6 +393,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -385,6 +405,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1152.633856676898
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1109.698182363371
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -392,6 +415,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 519.4991639237896
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 520.2482976908973
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -399,6 +425,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 41.430364173597276
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 39.134741619474795
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -435,6 +464,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 998.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
