--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -190,6 +190,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -197,6 +200,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1031.1107560999872
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1019.8754600552801
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -204,11 +210,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 603.2813480693219
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 585.8110833393567
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -238,6 +251,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 830.0476571185673
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 838.4331666962912
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -275,6 +291,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -283,6 +303,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1091.1107560999872
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1079.8754600552802
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -290,11 +313,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 723.2813480693219
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 705.8110833393567
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -333,6 +363,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1074.0476571185673
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1082.4331666962912
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
