--- a/config/zones/US-NW-PACE.yaml
+++ b/config/zones/US-NW-PACE.yaml
@@ -304,6 +304,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -311,6 +314,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1038.2985708247186
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1047.4235967504487
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -318,6 +324,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 404.1966603887903
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 410.0950813261025
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -325,6 +334,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 61.077625605917994
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 25.855668050323082
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -352,6 +364,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 754.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 740.5235575792449
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -386,6 +402,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -394,6 +414,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1098.2985708247186
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1107.4235967504487
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -401,6 +424,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 524.1966603887903
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 530.0950813261024
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -408,6 +434,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 99.077625605918
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 63.85566805032308
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -444,6 +473,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 998.5315891025153
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 984.5235575792449
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
