--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -319,6 +319,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -326,6 +329,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1076.4273735741049
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1094.927576530494
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -333,11 +339,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 521.1324027607403
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 471.6847263350428
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -367,6 +380,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 938.8752567850639
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 927.2427781942617
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -404,6 +420,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -412,6 +432,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1136.4273735741049
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1154.927576530494
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -419,11 +442,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 641.1324027607403
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 591.6847263350428
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -462,6 +492,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1182.8752567850638
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1171.2427781942617
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
