--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -870,6 +870,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2022-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -877,6 +880,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1032.0234558048815
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1041.5714428045928
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -884,11 +890,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 392.2742477255014
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 393.7660838295522
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 78.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 29.707905036391203
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -918,6 +931,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1068.7253320833786
+    - datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 1068.5017353846156
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -955,6 +971,10 @@ emissionFactors:
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022
+      value: 274.05045073430733
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -963,6 +983,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1092.0234558048815
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1101.5714428045928
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -970,11 +993,18 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 512.2742477255015
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 513.7660838295521
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 116.28737905336972
+    - _comment: Mean of all US zones
+      datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 67.7079050363912
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1010,6 +1040,9 @@ emissionFactors:
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1312.7253320833786
+    - datetime: '2022-01-01'
+      source: eGrid 2022; IPCC 2014
+      value: 1312.5017353846156
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
